--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "homepage": ".",
   "devDependencies": {
+    "@iconify/icons-akar-icons": "^1.2.6",
     "@iconify/icons-logos": "^1.2.6",
     "@iconify/react": "^1.1.4",
     "gh-pages": "^3.2.3",
